# qlscribe

./: AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  NEWS  README
cmake/: FindDbus32.cmake  FindLightScribe.cmake
debian/: changelog  conffiles  control  copyright  postinst  prerm  rules
doc/: lightscribeCDDB.htm
lscribed/: CMakeLists.txt  dbuscpp.cpp  dbuscpp.h  drive.cpp  drivehandler.cpp  drivehandler.h  drives.cpp  drives.h  introspecthandler.cpp  introspecthandler.h  lightscribe.conf.in  lscribed.h.in  lscribed.pro  main.cpp  manager.cpp  managerhandler.cpp  managerhandler.h  service.in
resources/: CMakeLists.txt  qlscribe.desktop  qlscribe.qrc  qlscribe.xcf  qlscribe.xml
src/: CMakeLists.txt  lightscribe.xml  main.cpp  mainwindow.cpp  mainwindow.h  previewinjector.cpp  previewinjector.h  qcdscene.cpp  qcdscene.h  qcdview.cpp  qcdview.h  qconsoleprintprogress.cpp  qconsoleprintprogress.h  qdialogcdproperties.cpp  qdialogcdproperties.h  qdialogcdproperties.ui  qdialogpixmap.cpp  qdialogpixmap.h  qdialogpixmap.ui  qdialogprint.cpp  qdialogprint.h  qdialogprint.ui  qdialogprogress.cpp  qdialogprogress.h  qdialogprogress.ui  qdialogroundtext.cpp  qdialogroundtext.h  qdialogroundtext.ui  qdialogsettings.cpp  qdialogsettings.h  qdialogsettings.ui  qdialogtext.cpp  qdialogtext.h  qdialogtext.ui  qgraphicsroundtextitem.cpp  qgraphicsroundtextitem.h  qlightpixmapitem.cpp  qlightpixmapitem.h  qlightroundtextitem.cpp  qlightroundtextitem.h  (+11 more)
